se agrega claveúnica

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"phpoffice/phpexcel": "1.8.0"
+		"phpoffice/phpexcel": "1.8.0",
+		"ivan-novakov/php-openid-connect-client": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
